Evaluate single digit factorial

BUG: 429272
FIXED-IN: 5.21